--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -604,6 +604,15 @@ img {
   font-family: 'Jost', sans-serif;
   font-weight: 500;
 }
+.title__textFour {
+  font-size: 6rem;
+  font-weight: 300;
+  line-height: 1;
+  letter-spacing: 0.1em;
+  margin-bottom: 1.6rem;
+  font-family: 'Jost', sans-serif;
+  font-weight: 500;
+}
 
 @media screen and (max-width: 800px) {
   .title__text {
